// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Test should not render a login button if authenticated 1`] = `
<div
  className="landing"
>
  <div
    className="dark-overlay landing-inner text-light"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-md-12 text-center"
        >
          <h1
            className="display-3 mb-4"
          >
            StudyGroup
          </h1>
          <p
            className="lead"
          >
            Gets you working with your peers pronto.
            <br />
            Setup meetings and organize your materials in one place
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Test should not render a login button if loading 1`] = `
<div
  className="landing"
>
  <div
    className="dark-overlay landing-inner text-light"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-md-12 text-center"
        >
          <h1
            className="display-3 mb-4"
          >
            StudyGroup
          </h1>
          <p
            className="lead"
          >
            Gets you working with your peers pronto.
            <br />
            Setup meetings and organize your materials in one place
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Test should render correctly 1`] = `
<div
  className="landing"
>
  <div
    className="dark-overlay landing-inner text-light"
  >
    <div
      className="container"
    >
      <div
        className="row"
      >
        <div
          className="col-md-12 text-center"
        >
          <h1
            className="display-3 mb-4"
          >
            StudyGroup
          </h1>
          <p
            className="lead"
          >
            Gets you working with your peers pronto.
            <br />
            Setup meetings and organize your materials in one place
          </p>
          <a
            className="btn btn-lg btn-info mt-5"
            href="login.html"
            onClick={[Function]}
          >
            Login
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
